--- a/index.html
+++ b/index.html
@@ -5,9 +5,21 @@
 	<title>Title</title>
 </head>
 <body>
+	<svg height="400" width="400">
+		<circle r="190"
+				cx="200"
+				cy="200"
+				fill="transparent"
+				stroke="blue"
+				stroke-width="15"
+				transform="rotate(-90 200 200)"
+				stroke-dasharray=""
+		/>
+	</svg>
 	<input id="duration" value="30"/>
 	<button id="start">Start</button>
 	<button id="pause">Pause</button>
+	<script src="timer.js"></script>
 	<script src="index.js"></script>
 </body>
 </html>
